--- a/client/code/premier test/public/style.css
+++ b/client/code/premier test/public/style.css
@@ -6,16 +6,17 @@
 }
 
 html {
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
     font-family: 'stanberry', Helvetica, Arial, sans-serif;
-    font-size: 10pt;
+    font-size: 14pt;
     background: url('src/hud/background.jpg');
     border: none;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 .topLeft {
@@ -31,4 +32,146 @@ body {
     min-height: 400px;
     margin: 0;
     padding: 0;
+}
+
+#login {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    background-image: url('src/login/background.jpg');
+    background-size: 100%;
+    min-height: 700px;
+}
+
+/* Login */
+#login_game_title {
+    text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    margin-left: -183px; /*Image is 367x107*/
+}
+
+#login_panel {
+    height: 370px;
+    width: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -200px;
+    margin-top: -185px;
+    box-shadow: 0 0 80px #222;
+}
+
+#login_panel input[type="text"] {
+    margin-left: 10px;
+    width: 320px;
+}
+
+#login_panel input[type="checkbox"] {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 10px;
+    font-size: 2px;
+}
+
+.login_field_text {
+    margin-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+#login_connect_button {
+    margin-left: 25px;
+    margin-top: 10px;
+    padding: .4em 6em .4em;
+}
+
+/* Shared styles */
+
+.small_text {
+    font-size: 12px;
+}
+
+.normal_text {
+    font-size: 14px;
+}
+
+.big_text {
+    font-size: 16px;
+}
+
+.huge_text {
+    font-size: 19px;
+}
+
+.fc_window {
+    background-image: linear-gradient(bottom, rgb(193, 185, 156) 0%, rgb(243, 233, 196) 100%);
+    background-image: -o-linear-gradient(bottom, rgb(193, 185, 156) 0%, rgb(243, 233, 196) 100%);
+    background-image: -moz-linear-gradient(bottom, rgb(193, 185, 156) 0%, rgb(243, 233, 196) 100%);
+    background-image: -webkit-linear-gradient(bottom, rgb(193, 185, 156) 0%, rgb(243, 233, 196) 100%);
+    background-image: -ms-linear-gradient(bottom, rgb(193, 185, 156) 0%, rgb(243, 233, 196) 100%);
+    border-radius: 10px;
+    box-shadow: 0 0 15px #222;
+}
+
+.fc_window_content {
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.fc_window input[type="text"] {
+    margin-top: 4px;
+    margin-bottom: 4px;
+    padding: 8px;
+    border-radius: 8px;
+    background-color: white;
+    outline: none;
+    font-family: 'stanberry', sans-serif;
+    font-size: 16px;
+    border-style: none;
+    box-shadow: 0 0 8px #888;
+}
+
+.fc_window .button {
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    font: 17px 'stanberry', Arial, Helvetica, sans-serif;
+    padding: .4em 2em .4em;
+    text-shadow: 0 0 6px black;
+    border-radius: 8px;
+    box-shadow: 0 0 8px #333;
+}
+
+.fc_window .button:hover {
+
+}
+
+.fc_window .button:active {
+
+}
+
+.fc_window .button.green {
+    background-image: linear-gradient(bottom, #67D210 50%, #A2F261 100%);
+    background-image: -o-linear-gradient(bottom, #67D210 50%, #A2F261 100%);
+    background-image: -moz-linear-gradient(bottom, #67D210 50%, #A2F261 100%);
+    background-image: -webkit-linear-gradient(bottom, #67D210 50%, #A2F261 100%);
+    background-image: -ms-linear-gradient(bottom, #67D210 50%, #A2F261 100%);
+}
+
+.fc_window .button.green:active {
+    background-image: linear-gradient(bottom, #A2F261 10%, #67D210 100%);
+    background-image: -o-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
+    background-image: -moz-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
+    background-image: -webkit-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
+    background-image: -ms-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
 }
