Got rid of em for px, Added css reset, aiming for pixel perfect cross browser rendering. We're pixel perfect up to 2px, it's not that important in our design and clearly better than before.

--- a/client/code/premier test/public/style.css
+++ b/client/code/premier test/public/style.css
@@ -1,3 +1,53 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
 @font-face {
     font-family: 'stanberry';
     src: url('src/fonts/stanberry-webfont.eot?#iefix') format('embedded-opentype'), url('src/fonts/stanberry-webfont.woff') format('woff'), url('src/fonts/stanberry-webfont.ttf') format('truetype');
@@ -87,7 +137,8 @@ body {
 #login_connect_button {
     margin-left: 25px;
     margin-top: 10px;
-    padding: .4em 6em .4em;
+    padding: 10px 100px 10px;
+    margin-bottom: 10px;
 }
 
 /* Shared styles */
@@ -146,7 +197,7 @@ body {
     font-weight: bold;
     color: white;
     font: 17px 'stanberry', Arial, Helvetica, sans-serif;
-    padding: .4em 2em .4em;
+    padding: 5px 10px 5px;
     text-shadow: 0 0 6px black;
     border-radius: 8px;
     box-shadow: 0 0 8px #333;
