--- a/client/code/premier test/public/style.css
+++ b/client/code/premier test/public/style.css
@@ -84,6 +84,8 @@ body {
     padding: 0;
 }
 
+/* Login */
+
 #login {
     position: absolute;
     top: 0;
@@ -96,7 +98,6 @@ body {
     min-height: 700px;
 }
 
-/* Login */
 #login_game_title {
     text-align: center;
     position: absolute;
@@ -140,7 +141,30 @@ body {
     margin-bottom: 10px;
 }
 
+/* Loading */
+
+#loading_panel {
+    z-index: 101;
+    visibility: hidden;
+    height: 150px;
+    width: 500px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -250px;
+    margin-top: -75px;
+    box-shadow: 0 0 80px #222;
+}
+
+#loading_progress {
+    margin-top: 35px;
+}
+
 /* Shared styles */
+
+.center {
+    text-align: center;
+}
 
 .small_text {
     font-size: 12px;
@@ -224,4 +248,68 @@ body {
     background-image: -moz-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
     background-image: -webkit-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
     background-image: -ms-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
+}
+
+.fc_window .progress-bar {
+    background-color: #1a1a1a;
+    text-align: left;
+    height: 25px;
+    box-shadow: 0 0 8px #333;
+    width: 410px;
+    margin: 10px 0;
+    margin-left: 25px;
+    border-radius: 8px;
+}
+
+.fc_window .progress-bar span {
+    display: inline-block;
+    height: 100%;
+    border-radius: 8px;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
+    -webkit-transition: width .4s ease-in-out;
+    -moz-transition: width .4s ease-in-out;
+    -ms-transition: width .4s ease-in-out;
+    -o-transition: width .4s ease-in-out;
+    transition: width .4s ease-in-out;
+}
+
+.fc_window .blue span {
+    background-color: #34c2e3;
+}
+
+.fc_window .green span {
+    background-color: #67D210;
+}
+
+.fc_window .stripes span {
+    -webkit-background-size: 30px 30px;
+    -moz-background-size: 30px 30px;
+    background-size: 30px 30px;
+    background-image: -webkit-gradient(linear, left top, right bottom, color-stop(.25, rgba(255, 255, 255, .15)), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, rgba(255, 255, 255, .15)), color-stop(.75, rgba(255, 255, 255, .15)), color-stop(.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+    background-image: -ms-linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+    background-image: -o-linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+
+    -webkit-animation: animate-stripes 3s linear infinite;
+    -moz-animation: animate-stripes 3s linear infinite;
+}
+
+@-webkit-keyframes animate-stripes {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 60px 0;
+    }
+}
+
+@-moz-keyframes animate-stripes {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 60px 0;
+    }
 }
