--- a/client/code/premier test/public/style.css
+++ b/client/code/premier test/public/style.css
@@ -160,6 +160,10 @@ body {
     margin-top: 35px;
 }
 
+#login_remember_me, #login_remember_me_label {
+    visibility: hidden;
+}
+
 /* Chat */
 
 #hud_chat {
@@ -329,6 +333,21 @@ body {
     background-image: -moz-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
     background-image: -webkit-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
     background-image: -ms-linear-gradient(bottom, #A2F261 10%, #67D210 100%);
+}
+
+.fc_window .button.disabled {
+    background-image: linear-gradient(bottom, rgba(156, 156, 156, 0.42) 50%, rgba(103, 104, 102, 0.19) 100%);
+    background-image: -o-linear-gradient(bottom, rgba(156, 156, 156, 0.42) 50%, rgba(103, 104, 102, 0.19) 100%);
+    background-image: -moz-linear-gradient(bottom, rgba(156, 156, 156, 0.42) 50%, rgba(103, 104, 102, 0.19) 100%);
+    background-image: -webkit-linear-gradient(bottom, rgba(156, 156, 156, 0.42) 50%, rgba(103, 104, 102, 0.19) 100%);
+    background-image: -ms-linear-gradient(bottom, rgba(156, 156, 156, 0.42) 50%, rgba(103, 104, 102, 0.19) 100%);
+    box-shadow: 0 0 8px #777;
+    color: gray;
+    text-shadow: none;
+}
+
+.fc_window .button.disabled:hover {
+    cursor: not-allowed;
 }
 
 .fc_window .progress-bar {
