--- a/client/code/style.css
+++ b/client/code/style.css
@@ -57,6 +57,8 @@ table {
 
 html {
 	height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -66,6 +68,13 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+body > div {
+    height:     100%;
+    overflow:   scroll;
 }
 
 a {
