--- a/client/code/style.css
+++ b/client/code/style.css
@@ -57,8 +57,8 @@ table {
 
 html {
 	height: 100%;
-    width: 100%;
-    overflow: hidden;
+	width: 100%;
+	overflow: hidden;
 }
 
 body {
@@ -68,8 +68,8 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-    width: 100%;
-    overflow: hidden;
+	width: 100%;
+	overflow: hidden;
 }
 
 a {
@@ -138,7 +138,7 @@ a:hover {
 #login_panel input[type="text"],
 #register_panel input[type="text"],
 #login_panel input[type="password"],
-#register_panel input[type="password"]{
+#register_panel input[type="password"] {
 	margin-left: 10px;
 	width: 320px;
 }
@@ -163,7 +163,7 @@ a:hover {
 	margin-top: 10px;
 	padding: 10px 100px 10px;
 	margin-bottom: 10px;
-    width: 110px;
+	width: 110px;
 }
 
 /* Loading */
@@ -419,8 +419,8 @@ a:hover {
 	background-image: -o-linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
 	background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
 
-	-webkit-animation: animate-stripes 3s linear infinite;
-	-moz-animation: animate-stripes 3s linear infinite;
+	/*-webkit-animation: animate-stripes 3s linear infinite;
+	-moz-animation: animate-stripes 3s linear infinite;*/
 }
 
 @-webkit-keyframes animate-stripes {
