--- a/client/code/style.css
+++ b/client/code/style.css
@@ -62,7 +62,7 @@ html {
 }
 
 body {
-	font-family: 'stanberry', Helvetica, Arial, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 14pt;
 	border: none;
 	margin: 0;
@@ -180,13 +180,21 @@ a:hover {
 	padding-bottom: 8px;
 }
 
-#login_connect_button,
 #register_connect_button {
-	margin-left: 25px;
-	margin-top: 10px;
-	padding: 10px 100px 10px;
-	margin-bottom: 10px;
+    margin-left: 25px;
+    margin-top: 10px;
+    padding: 10px 100px 10px;
+    margin-bottom: 10px;
     width: 110px;
+}
+
+.bf_button {
+    background-image: url('src/login/bf_login_button.png');
+    background-repeat: no-repeat;
+    width: 105px;
+    height: 23px;
+    margin: auto;
+    margin-bottom: 45px;
 }
 
 /* Loading */
@@ -316,11 +324,11 @@ a:hover {
 }
 
 .big_text {
-	font-size: 16px;
+	font-size: 12px;
 }
 
 .huge_text {
-	font-size: 19px;
+	font-size: 12px;
 }
 
 .hidden {
